# ai_tut

./: .gitignore  pyproject.toml  test.ipynb
colab/: LoRA_Llama_3_1.ipynb  LoRA_basic.ipynb  fine_tunning.ipynb
notebooks/: graph_rag.ipynb
notebooks/graph_rag/: ai_copyright_graph.html  dataset.csv  graph_data.json  graph_rag.ipynb  graph_template.html
