[project]
name = "jupyter-vscode-tut"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "graspologic>=3.3.0",
    "ipykernel>=7.2.0",
    "llama-index>=0.14.21",
    "nest-asyncio>=1.6.0",
    "pandas>=3.0.2",
    "setuptools<81",
]
